almost done with homework

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 body {
-	background: url("../images/inside-background.jpg");
+  background: url("../images/inside-background.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 1200px;
 }
 
 h1 {
@@ -8,13 +13,13 @@ h1 {
 	font-family: 'Fjalla One', sans-serif;
 	padding: 20px;
 	text-align: center;
-	font-size: 150px;
+	font-size: 140px;
 }
 
 h2 {
 
 	background: url("../images/inside-background.jpg"); 
-	border: 1px solid LightSlateGrey  ;
+	border: 1px solid LightSlateGrey ;
 	color: SaddleBrown  ;
 	text-shadow: 1px 1px peru;
 	font-family: 'Fjalla One', sans-serif;
@@ -26,7 +31,19 @@ h2 {
 
 }
 
-#image {
+
+
+#appendToImage1, #appendToImage2 {
+	background-color: white;
+    border: 1px solid white;
+    width: 200px;
+    margin-bottom: 20px;
+    height: 200px;
+    margin-top: 10px;
+    margin-left: 290px;
+}
+
+.image {
 	width: 175px;
 	height: 175px;
 	border: 1px solid white;
@@ -35,9 +52,62 @@ h2 {
 	background-color: white;
 }
 
-#image:hover {
+.image:hover  {
 	background: url("../images/background.gif"); 
 	width: 150px;
 	height: 150px;
 	transition: 1s ease;
+	opacity: 2;
+	content: attr(data-text);
 }
+
+.ball {
+	font-size: 110px;
+}
+
+.btn-primary {
+    margin-left: 30px;
+    color: #fff;
+    background-color: SaddleBrown;
+}
+
+.btn {
+	padding: 20px;
+}
+
+
+.stat1 {
+	border: 2px solid LightSlateGrey ;
+	width: 450px;
+	margin-bottom: 20px;
+	position: relative;
+	left: 150px;
+	height: 300px;
+	padding: 30px;
+	text-align: center;
+}
+
+
+.stat2 {
+	border: 2px solid LightSlateGrey ;
+	width: 350px;
+	margin-bottom: 20px;
+	position: relative;
+	left: 230px;
+	height: 200px;
+	padding: 60px;
+}
+
+.stat {
+	color: white;
+	font-size: 18px;
+	text-shadow: 1px 1px peru;
+}
+
+.energy {
+	color: white;
+	font-size: 18px;
+	text-shadow: 1px 1px peru;
+}
+
+
