--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,20 +112,43 @@ h2 {
 #statsContainer {
     text-align: center;
     height: 200px;
-    border: 1px solid white;
     margin: 30px;
+    padding: 20px;
 }
 
 #stats1 {
-    border: 1px solid white;
-    margin: 30px;
-    width: 300px;
+    width: 50%;
     float: left;
+    padding: 10px;
+    font-family: 'Fjalla One', sans-serif;
+    color: white;
+    text-shadow: 1px 1px peru;
+    font-size: 20px;
 }
 
 #stats2 {
-    border: 1px solid white;
-    margin: 30px;
-    width: 300px;
-    float: right;
+    width: 50%;
+    float: left;
+    padding: 10px;
+    font-family: 'Fjalla One', sans-serif;
+    color: white;
+    text-shadow: 1px 1px peru;
+    font-size: 20px;
+}
+
+#buttonContainer {
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 0px;
+}
+
+#offense,
+#defense,
+#clutch {
+    margin: 15px;
+    padding: 10px;
+    width: 200px;
+    font-size: 20px;
+    border-radius: 20px;
+    outline: none;
 }
